# libertine-scope

./: .bzrignore  .gitignore  CMakeLists.txt  README.md  libertine-scope.apparmor  manifest.json.in
data/: CMakeLists.txt  blacklist  libertine-scope-settings.ini.in  libertine-scope.ini.in  logo.xcf  project-logo.xcf
debian/: changelog  control  copyright  rules  watch
libertine-scope/: CMakeLists.txt  action.cpp  action.h  app_description.cpp  app_description.h  applauncher.cpp  applauncher.h  blacklist.cpp  blacklist.h  config.h.in  container.cpp  container.h  hidden_apps.cpp  libertine.cpp  libertine.h  preview.cpp  query.cpp  query.h  scope.cpp  scope.h
po/: CMakeLists.txt  POTFILES.in  POTFILES.in.in  en_AU.po  en_GB.po  es.po  fi.po  fr.po  gl.po  hu.po  libertine-scope.pot  ms.po  pt.po  uk.po
scope/: CMakeLists.txt
scope/apps/: CMakeLists.txt  action.cpp  action.h  applauncher.cpp  blacklist.cpp  config.h.in  container.cpp  container.h  hidden_apps.cpp  hidden_apps.h  libertine-scope.ubuntu_libertine-scope.ini.in.in  libertine.cpp  libertine.h  preview.cpp  preview.h  query.cpp  query.h  scope.cpp  scope.h
src/: CMakeLists.txt  applauncher.cpp  applauncher.h  container.cpp  container.h  libertine.cpp  libertine.h  localization.h  preview.cpp  preview.h  query.cpp  query.h  scope.cpp  scope.h
tests/: CMakeLists.txt  TypedScopeFixture.h  fake_container.cpp  fake_container.h  fake_container_json.h  fake_libertine.cpp  fake_libertine.h  mock_hidden_apps.h  scopefixture.h  test_action.cpp  test_app_description.cpp  test_blacklist.cpp  test_hidden_apps.cpp  test_preview.cpp  test_query.cpp  test_scope.cpp
tests/data/: Full.desktop  NoComment.desktop  blacklist  hidden
